--- a/One_Hot_Encoding.ipynb
+++ b/One_Hot_Encoding.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWcLmrurYLAjDSWKn2bJ0f",
+      "authorship_tag": "ABX9TyPGMqzQbGSfL0uRRr4t7QMQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,51 +39,6 @@
       "metadata": {
         "id": "PwZBnHZCJA9Y"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def get_onehot_vector(somestring):\n",
-        "onehot_encoded = []\n",
-        "for word in somestring.split():\n",
-        "temp = [0]*len(vocab)\n",
-        "if word in vocab:\n",
-        "temp[vocab[word]-1] = 1\n",
-        "onehot_encoded.append(temp)\n",
-        "return onehot_encoded\n",
-        "get_onehot_vector(processed_docs[1])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 180
-        },
-        "id": "bJGPiBrIJO4l",
-        "outputId": "8727d5a4-a397-4ca0-d191-c55642dc434c"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'processed_docs' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2-3836301180.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Example usage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mget_onehot_vector\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocessed_docs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'processed_docs' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KI72m-zuJcyh"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -171,12 +126,149 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "\n",
+        "corpus = [\n",
+        "    'dog bites dog and dog dog runs.',\n",
+        "    'man bites dog.',\n",
+        "    'And this is the third one.',\n",
+        "    'Is this the first document?'\n",
+        "]\n",
+        "\n",
+        "# Step 1: Count Vectorization\n",
+        "vectorizer = CountVectorizer()\n",
+        "X = vectorizer.fit_transform(corpus)\n",
+        "V = vectorizer.get_feature_names_out()  # Updated method\n",
+        "print(\"Vocabulary List:\\n\", V)\n",
+        "\n",
+        "# Step 2: Label Encoding\n",
+        "encoder = LabelEncoder()\n",
+        "V_labels = encoder.fit_transform(V)\n",
+        "print(\"Label Encoded:\\n\", V_labels)\n",
+        "\n",
+        "# Step 3: Reshape to 2D array for OneHotEncoder\n",
+        "V_labels = V_labels.reshape((V_labels.shape[0], 1))\n",
+        "print(\"Reshaped Labels:\\n\", V_labels)\n",
+        "\n",
+        "# Step 4: One-Hot Encoding\n",
+        "encoder = OneHotEncoder()\n",
+        "y = encoder.fit_transform(V_labels)\n",
+        "print(\"One-Hot Encoded:\\n\", y)"
+      ],
       "metadata": {
-        "id": "yMI3UwG-KoTV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yMI3UwG-KoTV",
+        "outputId": "47589a89-efb7-4d90-f3d2-bd48d3bf9fc5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vocabulary List:\n",
+            " ['and' 'document' 'first' 'is' 'one' 'second' 'the' 'third' 'this']\n",
+            "Label Encoded:\n",
+            " [0 1 2 3 4 5 6 7 8]\n",
+            "Reshaped Labels:\n",
+            " [[0]\n",
+            " [1]\n",
+            " [2]\n",
+            " [3]\n",
+            " [4]\n",
+            " [5]\n",
+            " [6]\n",
+            " [7]\n",
+            " [8]]\n",
+            "One-Hot Encoded:\n",
+            " <Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+            "\twith 9 stored elements and shape (9, 9)>\n",
+            "  Coords\tValues\n",
+            "  (0, 0)\t1.0\n",
+            "  (1, 1)\t1.0\n",
+            "  (2, 2)\t1.0\n",
+            "  (3, 3)\t1.0\n",
+            "  (4, 4)\t1.0\n",
+            "  (5, 5)\t1.0\n",
+            "  (6, 6)\t1.0\n",
+            "  (7, 7)\t1.0\n",
+            "  (8, 8)\t1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "\n",
+        "corpus = [\n",
+        "    'dog bites dog and dog dog runs.',\n",
+        "    'man bites dog.',\n",
+        "]\n",
+        "\n",
+        "# Step 1: Count Vectorization\n",
+        "vectorizer = CountVectorizer()\n",
+        "X = vectorizer.fit_transform(corpus)\n",
+        "V = vectorizer.get_feature_names_out()  # Updated method\n",
+        "print(\"Vocabulary List:\\n\", V)\n",
+        "\n",
+        "# Step 2: Label Encoding\n",
+        "encoder = LabelEncoder()\n",
+        "V_labels = encoder.fit_transform(V)\n",
+        "print(\"Label Encoded:\\n\", V_labels)\n",
+        "\n",
+        "# Step 3: Reshape to 2D array for OneHotEncoder\n",
+        "V_labels = V_labels.reshape((V_labels.shape[0], 1))\n",
+        "print(\"Reshaped Labels:\\n\", V_labels)\n",
+        "\n",
+        "# Step 4: One-Hot Encoding\n",
+        "encoder = OneHotEncoder()\n",
+        "y = encoder.fit_transform(V_labels)\n",
+        "print(\"One-Hot Encoded:\\n\", y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5KZQR7nKMo_9",
+        "outputId": "da96d84d-b5a8-432c-bb68-b38f3e050bba"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vocabulary List:\n",
+            " ['and' 'bites' 'dog' 'man' 'runs']\n",
+            "Label Encoded:\n",
+            " [0 1 2 3 4]\n",
+            "Reshaped Labels:\n",
+            " [[0]\n",
+            " [1]\n",
+            " [2]\n",
+            " [3]\n",
+            " [4]]\n",
+            "One-Hot Encoded:\n",
+            " <Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+            "\twith 5 stored elements and shape (5, 5)>\n",
+            "  Coords\tValues\n",
+            "  (0, 0)\t1.0\n",
+            "  (1, 1)\t1.0\n",
+            "  (2, 2)\t1.0\n",
+            "  (3, 3)\t1.0\n",
+            "  (4, 4)\t1.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
